feat: footer 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,9 @@ body {
 .flex-i-center {
   @apply flex items-center;
 }
+.flex-j-i-center {
+  @apply flex items-center justify-center;
+}
 .flex-i-text-center {
   @apply flex items-center text-center;
 }
